@@ -1,0 +1,19 @@
+#!/usr/bin/env perl
+
+use strict;
+use warnings;
+
+use Data::Dumper::Concise;
+
+use lib 't/lib';
+
+use A::Util;
+
+my $engine = shift;
+if ($engine eq 'SQLite') {
+   my $s = TestSchema->connect('dbi:SQLite::memory:');
+   $s->deploy;
+   print Dumper($s->resultset('Gnarly')->explain)
+} else {
+   print Dumper(A::Util::connect($engine, $engine)->resultset('Gnarly')->explain)
+}
