@@ -1,0 +1,23 @@
+[-Exec]
+[@CorePrep]
+
+[Name]
+
+[Region  / prelude]
+
+[Generic / SYNOPSIS]
+[Generic / DESCRIPTION]
+[Generic / OVERVIEW]
+
+[Leftovers]
+
+[Collect / ATTRIBUTES]
+command = attr
+
+[Collect / METHODS]
+command = method
+
+[Region  / postlude]
+
+[Authors]
+[Legal]
